Fixed collapsable menu issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ body {
 .modal-cell {
   background-color: var(--bs-white);
   padding: 1rem;
-  margin: 0.25rem;
+  margin: 0.25rem 0;
   border-radius: 1rem;
 }
 
